fix: can provide separately collectivy name and collectivity number